--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="guide-desc">"I lived in Birmingham for over 20 years, so I can show you all of its best parts and hidden secrets."</p>
                     <h4 class="guide-name">Rob Young</h4>
                 </div>
-            </div
+            </div>
         </div>
     </body>
 </html>
